fixed gaps between sections

--- a/css/home.css
+++ b/css/home.css
@@ -483,7 +483,7 @@ a {
 		margin-right: auto;
 	}
 
-	#appointment-description {
+	#appointment-description, #bot-description, #doctor-description, #diagnosis-description {
 		position: relative;
 		top: -220px;
 	}
